--- a/layouts/shortcodes/findRegex.html
+++ b/layouts/shortcodes/findRegex.html
@@ -1,5 +1,5 @@
 {{- $inputParams := "" -}}
-{{- $pageDir := path.Join "content" .Page.Dir -}}
+{{- $pageDir := path.Join "content" .Page.File.Dir -}}
 {{- if .IsNamedParams -}}
 {{- $inputParams = merge (dict "path" $pageDir) .Params -}}
 {{- else -}}
